update how to build