@@ -1,4 +1,12 @@
+0 Preparing Java SDK, maven, karaf installation and enviroment setting as below:
+
+	set JAVA_HOME
+	set maven and karaf execute path into path(Windows/Linux) or /<user>/Applications(MAC OSX)
+
+	set MAVEN_OPTS="-Xmx1048m -XX:MaxPermSize=512"
+
 1 How to build?
 
-cd top directory
-./build
+	cd top directory
+	. build
+
